# semantica

./: CHANGELOG.md  README.md  docs_check.py  pyproject.toml
.github/workflows/: benchmark.yml  defender-for-devops.yml  docs.yml
benchmarks/: benchmarks_runner.py
benchmarks/infrastructure/: compare.py  test_git_lfs_pointers.py
cookbook/advanced/: snowflake_ingestion_examples.py
cookbook/introduction/: neptune-setup.yaml
cookbook/use_cases/blockchain/: 02_Transaction_Network_Analysis.ipynb
cookbook/use_cases/cybersecurity/: 01_Real_Time_Anomaly_Detection.ipynb  02_Threat_Intelligence_Hybrid_RAG.ipynb
cookbook/use_cases/finance/: 01_Financial_Data_Integration_MCP.ipynb
cookbook/use_cases/intelligence/: 01_Criminal_Network_Analysis.ipynb
cookbook/use_cases/supply_chain/: 01_Supply_Chain_Data_Integration.ipynb
docs/: CodeExamples.md  LIBS_README.md  architecture.md  citation.md  community-projects.md  community.md  concepts.md  contributing.md  docs.json  faq.md  getting-started.md  governance.md  index.md  installation.md  learning-more.md  modules.md  quickstart.md  use-cases.md
docs/reference/: change_management.md  conflicts.md  context.md  core.md  deduplication.md  embeddings.md  evals.md  explorer.md  export.md  graph_store.md  ingest.md  kg.md  llms.md  mcp_server.md  normalize.md  ontology.md  parse.md  pipeline.md  provenance.md  reasoning.md  seed.md  semantic_extract.md  split.md  triplet_store.md  utils.md  vector_store.md  visualization.md
explorer/: package-lock.json  package.json
explorer/src/: App.tsx
explorer/src/workspaces/GraphWorkspace/: GraphCanvas.tsx  GraphInspectorPanel.tsx  GraphWorkspace.tsx  graphSceneState.ts
explorer/src/workspaces/GraphWorkspace/behaviors/: focusCameraBehavior.ts  searchFocusBehavior.ts  types.ts  viewModeSwitchBehavior.ts
explorer/src/workspaces/OntologyWorkspace/: AlignmentsTab.tsx  OntologyLoader.tsx  OntologyManager.tsx  ShaclStudio.tsx  index.tsx
explorer/tests/: graphSceneState.display.test.ts
plugins/.claude-plugin/: plugin.json
semantica/: cli.py
semantica/deduplication/: duplicate_detector.py
semantica/explorer/: __init__.py
semantica/explorer/routes/: graph.py  ontology.py
semantica/ingest/: __init__.py  ingest_usage.md  methods.py  public_api_ingestor.py  registry.py
semantica/kg/: graph_builder.py
semantica/semantic_extract/: __init__.py  coreference_resolver.py  methods.py  ner_extractor.py  providers.py  relation_extractor.py  semantic_network_extractor.py  triplet_extractor.py
tests/: test_cli_commands.py  test_cli_foundation.py  test_issue_554_fixes.py  verify_rich_cli.py
tests/deduplication/: test_deduplication.py
tests/explorer/: test_explorer_api.py
tests/ingest/: test_optional_imports.py  test_public_api_ingestor.py
tests/semantic_extract/: test_imports.py
